--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,45 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+   font-family: "Sedan SC";
+  src: url('../fonts/SedanSC-Regular.ttf') format('truetype');
+};
+html, body{
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+input {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+}
+  h1{
+    font-size: 2.5rem;
   }
-}
+  p{
+     font-size: 1.5rem;  }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+button {
+    font-size: 1.2rem;
+  margin-top: 24px;
+  border: none;
+  width: 8rem;
+  height: 5vh;
+  background-color: #F1B55B;
+  color: black;
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
 }
+button :hover {
+ cursor: pointer;
+ box-shadow: 0px 0px 25px 0px rgb(208, 139, 64);
+} 
